load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("//seed/devprod/go:proto.bzl", "go_connect_library")
load("//seed/devprod/ndscm/starlark:defs.bzl", "nd_bootstrap")

# gazelle:proto file

package(default_visibility = [
    "//seed/devprod/golink:__subpackages__",
])

proto_library(
    name = "golink_proto",
    srcs = ["golink.proto"],
    deps = [
        "@protobuf//:empty_proto",
        "@protobuf//:field_mask_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "golink_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/ndscm/theseed/seed/devprod/golink/proto/golinkpb",
    proto = ":golink_proto",
)

go_connect_library(
    name = "golink_go_connect",
    importpath = "github.com/ndscm/theseed/seed/devprod/golink/proto/golinkpbconnect",
    proto = ":golink_proto",
    deps = [
        ":golink_go_proto",
        "@com_connectrpc_connect//:connect",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

ts_proto_library(
    name = "golink_ts_proto",
    copy_files = False,
    node_modules = "//:node_modules",
    proto = ":golink_proto",
)

proto_library(
    name = "golink_error_proto",
    srcs = ["golink_error.proto"],
)

go_proto_library(
    name = "golink_error_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/ndscm/theseed/seed/devprod/golink/proto/golinkerrorpb",
    proto = ":golink_error_proto",
)

ts_proto_library(
    name = "golink_error_ts_proto",
    copy_files = False,
    node_modules = "//:node_modules",
    proto = ":golink_error_proto",
)

npm_package(
    name = "golink_ts_proto_pkg",
    srcs = [
        "package.json",
        ":golink_error_ts_proto",
        ":golink_ts_proto",
    ],
)

alias(
    name = "pkg",  # Required by aspect_rules_js
    actual = ":golink_ts_proto_pkg",
    visibility = ["//visibility:public"],
)

nd_bootstrap(
    dsts = [
        {
            "dst": "golinkpb",
            "dir": True,
            "srcs": [{
                "src": ":golink_go_proto",
                "output_group": "go_generated_srcs",
            }],
        },
        {
            "dst": "golinkpbconnect",
            "dir": True,
            "srcs": [{
                "src": ":golink_go_connect_go",
            }],
        },
        {
            "dst": "golinkerrorpb",
            "dir": True,
            "srcs": [{
                "src": ":golink_error_go_proto",
                "output_group": "go_generated_srcs",
            }],
        },
        {
            "dst": "golink_pb.js",
            "srcs": [{
                "src": ":golink_ts_proto",
            }],
        },
        {
            "dst": "golink_pb.d.ts",
            "srcs": [{
                "src": ":golink_ts_proto",
                "output_group": "types",
            }],
        },
        {
            "dst": "golink_error_pb.js",
            "srcs": [{
                "src": ":golink_error_ts_proto",
            }],
        },
        {
            "dst": "golink_error_pb.d.ts",
            "srcs": [{
                "src": ":golink_error_ts_proto",
                "output_group": "types",
            }],
        },
    ],
)
